[gd_scene load_steps=10 format=3 uid="uid://bqin2bn47hlda"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_700qu"]
[ext_resource type="Texture2D" uid="uid://y0w37vu8skwr" path="res://assets/bloody unicorn.png" id="2_kcqqj"]
[ext_resource type="Texture2D" uid="uid://5s3t0l8qtsw4" path="res://assets/img/bgblue.png" id="3_bgcp2"]
[ext_resource type="Texture2D" uid="uid://cdlyqaudniicf" path="res://assets/img/light.png" id="4_fsmo0"]

[sub_resource type="GDScript" id="GDScript_ip21y"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="Animation" id="Animation_4f636"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Panel/AnimationRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/StartButton/PointLight2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qhbrb"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Panel/AnimationRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rupbs"]
resource_name = "flicker"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/StartButton/PointLight2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7qo44"]
_data = {
"RESET": SubResource("Animation_4f636"),
"fade_in": SubResource("Animation_qhbrb"),
"flicker": SubResource("Animation_rupbs")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_700qu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_right = 23.0
offset_bottom = 220.0
grow_horizontal = 2
alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/Panel"]
position = Vector2(0, -70)
scale = Vector2(0.504687, 0.550926)
texture = ExtResource("2_kcqqj")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Panel"]
z_index = -1
layout_mode = 2
offset_left = -767.0
offset_top = -511.0
offset_right = 729.0
offset_bottom = 461.0
size_flags_horizontal = 4
texture = ExtResource("3_bgcp2")

[node name="AnimationRect" type="TextureRect" parent="VBoxContainer/Panel"]
layout_mode = 1
offset_left = -847.0
offset_top = -556.0
offset_right = 867.0
offset_bottom = 1944.0
scale = Vector2(1, 0.44)
texture = ExtResource("3_bgcp2")

[node name="Label" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Unicorn Woods"

[node name="StartButton" type="Button" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Start"
script = SubResource("GDScript_ip21y")

[node name="PointLight2D" type="PointLight2D" parent="VBoxContainer/StartButton"]
position = Vector2(24, 29)
color = Color(1, 1, 1, 0)
texture = ExtResource("4_fsmo0")
texture_scale = 0.75

[node name="QuitButton" type="Button" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Quit
"
script = SubResource("GDScript_ip21y")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7qo44")
}

[node name="LightTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
[connection signal="timeout" from="LightTimer" to="." method="_on_light_timer_timeout"]
